# pyramid_services_autowire

./: .gitignore  CHANGES.rst  LICENSE.txt  README.rst  setup.cfg  setup.py  tox.ini
pyramid_services_autowire/: __init__.py
tests/: test_autowire.py  test_functional.py
