; -*- coding: utf-8 -*-

[metadata]
name = pyramid_services_autowire
version = 0.2.dev1
author = OCHIAI, Gouji
author_email = gjo.ext@gmail.com
url = https://github.com/gjo/pyramid_services_autowire
license = MIT
classifiers =
  Development Status :: 3 - Alpha
  Framework :: Pyramid
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
  pyramid
  pyramid_services
  zope.interface

[options.extras_require]
testing =
develop =
  tox
  twine

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
